--- a/yuchdroid16/res/layout/mail_list.xml
+++ b/yuchdroid16/res/layout/mail_list.xml
@@ -2,9 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#ffffff"
-    >
-    
+    android:background="#ffffff">
+        
     <ListView android:id="@+id/android:list"
           	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
