--- a/yuchdroid16/res/layout/mail_list_item.xml
+++ b/yuchdroid16/res/layout/mail_list_item.xml
@@ -1,62 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/mail_item"
     android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:background="#ffffff"
-    android:padding="6dip">
+    android:layout_height="50dp"
+    android:background="#ffffff" 
+    android:orientation="horizontal" >
     
     <CheckBox
-    	android:visibility="invisible"
         android:id="@+id/mail_check_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:width="8dp"
-        android:height="8dp"
-        android:layout_marginRight="6dip"/>
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+		android:button="@drawable/checkbox_no"
+		android:checked="@drawable/checkbox_yes" 
+		android:layout_marginLeft="2dp"
+		android:layout_marginTop="7dp"/>
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="0dip"
-        android:layout_weight="1"
-        android:layout_height="fill_parent">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" 
+        android:layout_weight="1"        
+        android:orientation="vertical">
 
- 		<LinearLayout>
+ 		<LinearLayout
+ 		 	android:orientation="horizontal"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"
+	        android:layout_weight="1">
  			<TextView
 	        	android:id="@+id/mail_subject"
+	        	android:layout_weight="1"
 	            android:layout_width="wrap_content"
-	            android:layout_height="0dip"
-	            android:layout_weight="1"
+	            android:layout_height="fill_parent"
+	            android:maxWidth="150dp"
+	            android:textSize="20dp"
+	            android:singleLine="true"
+	            android:ellipsize="end"
 	            android:textColor="#000000"
-	            android:gravity="center_vertical"/>
+	            android:gravity="center_vertical"
+	            android:text="subject"/>
 	            
             <TextView
 	        	android:id="@+id/mail_body"
+	        	android:layout_weight="1"
+	        	android:textSize="20dp"
+	        	android:maxWidth="180dp"
 	            android:layout_width="wrap_content"
-	            android:layout_height="0dip"
-	            android:layout_weight="1"
+	            android:layout_height="fill_parent"
 	            android:textColor="#d0d0d0"
-	            android:gravity="center_vertical"/>
+	            android:layout_marginLeft="3dp"
+	            android:singleLine="true"
+	            android:gravity="center_vertical"
+	            android:text="body"/>
 	            
 	        <CheckBox
 	        	android:id="@+id/mail_mark_btn"
 	        	android:layout_width="wrap_content"
-        		android:layout_height="wrap_content"
-        		android:background="@android:drawable/star_off"
+        		android:layout_height="fill_parent"
+        		android:button="@android:drawable/star_off"
         		android:checked="@android:drawable/star_on"
-        		android:gravity="right"
-	        />
+        		android:gravity="right"/>
  		</LinearLayout>
         
-            
-        <TextView  
-        	android:id="@+id/mail_from_to"
-            android:layout_width="fill_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1" 
-            android:textColor="#000000"
-            android:singleLine="true"
-            android:ellipsize="marquee" />
-            
+        <LinearLayout
+ 		 	android:orientation="horizontal"
+ 		 	android:layout_weight="1.2"
+	        android:layout_width="fill_parent"	        
+	        android:layout_height="fill_parent">
+	       <TextView  
+				android:id="@+id/mail_from_to"
+				android:layout_weight="1"
+				android:layout_width="wrap_content"
+				android:layout_height="fill_parent"
+				android:maxWidth="150dp"
+				android:textSize="16dp"
+				android:textColor="#000"
+				android:singleLine="true"
+				android:text="mail address "/>
+	       <TextView  
+				android:id="@+id/mail_time"
+				android:layout_weight="0.2"
+				android:layout_width="wrap_content"
+				android:layout_height="fill_parent"
+				android:maxWidth="60dp"				
+				android:textSize="16dp"
+				android:textColor="#000"
+				android:gravity="right"
+				android:text="mail time"/>
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
