--- a/yuchdroid16/res/layout/mail_list.xml
+++ b/yuchdroid16/res/layout/mail_list.xml
@@ -5,8 +5,8 @@
     android:background="#ffffff">
         
     <ListView android:id="@+id/android:list"
-          	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
+          	android:layout_width="fill_parent"
+        	android:layout_height="fill_parent"
         	android:divider="#ddd"
         	android:dividerHeight="1dp"
         	android:headerDividersEnabled="false"
