--- a/yuchdroid16/res/layout/main.xml
+++ b/yuchdroid16/res/layout/main.xml
@@ -12,7 +12,6 @@
     	android:layout_centerHorizontal="true"
     	android:src="@drawable/big_logo"
     />
-    
     <LinearLayout 
     	android:layout_height="wrap_content" 
     	android:layout_width="fill_parent"
@@ -69,15 +68,16 @@
     	/>
     </LinearLayout>
     <Button android:text="@string/start_svr_but" 
-       		android:id="@+id/start_svr" 
+       		android:id="@+id/login_start_svr" 
        		android:layout_height="wrap_content" 
        		android:layout_width="wrap_content"
        		android:gravity="center_vertical"
     />
-        		
-    <TextView android:text="TextView" 
-   			android:id="@+id/textView1" 
-   			android:layout_width="fill_parent" 
-   			android:layout_height="wrap_content" 
-   	/>
+  	<TextView android:text="TextView" 
+  			android:id="@+id/login_connect_text"
+  			android:textSize="20dp" 
+  			android:layout_width="fill_parent" 
+  			android:layout_height="wrap_content" 
+  			android:layout_gravity="center_vertical"
+	/>   
 </LinearLayout>
