--- a/yuchdroid16/res/menu/login_menu.xml
+++ b/yuchdroid16/res/menu/login_menu.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:id="@+id/login_menu_debug_info"
-          android:icon="@drawable/bug"
+          android:icon="@drawable/login_menu_ic_bug"
           android:title="@string/title_debug_info" />
+    <item android:id="@+id/login_menu_home"
+          android:icon="@drawable/login_menu_ic_home"
+          android:title="@string/login_menu_home" />
 </menu>
