--- a/yuchdroid16/res/layout/home.xml
+++ b/yuchdroid16/res/layout/home.xml
@@ -1,48 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
-	android:background="#FFF">
+	android:background="#FFF"
+	android:id="@+id/home_activity">
 	
-	<LinearLayout
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:id="@+id/home_content_view"
-		android:layout_weight="20">
-	</LinearLayout>
-	
-	<LinearLayout
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center"
+	<RadioGroup 
+		android:id="@+id/home_status_bar"
 		android:orientation="horizontal"
+		android:layout_gravity="center"
+		android:gravity="center"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_alignParentBottom="true"
 		android:background="#888">
-		<RadioGroup 
-			android:id="@+id/home_status_bar"
-			android:orientation="horizontal"
-			android:layout_gravity="center"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content">
-			<RadioButton
-				android:id="@+id/home_status_bar_mail"
-				android:layout_width="100dp"
-				android:layout_height="fill_parent" 
-				android:button="@drawable/home_status_ic_mail"
-				android:checked="true"/>
-			<RadioButton
-				android:id="@+id/home_status_bar_weibo"
-				android:layout_width="100dp"
-				android:layout_height="fill_parent"
-				android:text="Weibo"/>
-			<RadioButton
-				android:id="@+id/home_status_bar_im"
-				android:layout_width="100dp"
-				android:layout_height="fill_parent"
-				android:text="IM"/>
-		</RadioGroup>
-		
-	</LinearLayout>
+		<RadioButton
+			android:id="@+id/home_status_bar_mail"
+			android:layout_width="100dp"
+			android:layout_height="fill_parent"
+			android:button="@drawable/home_status_ic_mail"
+			android:checked="true"/>
+		<RadioButton
+			android:id="@+id/home_status_bar_weibo"
+			android:layout_width="100dp"
+			android:layout_height="fill_parent"
+			android:text="Weibo"/>
+		<RadioButton
+			android:id="@+id/home_status_bar_im"
+			android:layout_width="100dp"
+			android:layout_height="fill_parent"
+			android:text="IM"/>
+	</RadioGroup>
+
     
-</LinearLayout>
+</RelativeLayout>
