--- a/yuchdroid16/res/values/styles.xml
+++ b/yuchdroid16/res/values/styles.xml
@@ -8,4 +8,7 @@
 		<item name="android:windowIsFloating">true</item>
 		<item name="android:backgroundDimEnabled">false</item>
 	</style>
+	<style name="NoBackgroundTheme" parent="android:Theme">
+		<item name="android:windowBackground">@null</item>	
+	</style>
 </resources> 
