--- a/yuchdroid16/res/layout/home.xml
+++ b/yuchdroid16/res/layout/home.xml
@@ -6,7 +6,7 @@
 	android:layout_height="fill_parent"
 	android:background="#FFF"
 	android:id="@+id/home_activity">
-	
+		
 	<RadioGroup 
 		android:id="@+id/home_status_bar"
 		android:orientation="horizontal"
@@ -18,21 +18,22 @@
 		android:background="#888">
 		<RadioButton
 			android:id="@+id/home_status_bar_mail"
-			android:layout_width="100dp"
+			android:layout_width="0"
+			android:layout_weight="1"
 			android:layout_height="fill_parent"
 			android:button="@drawable/home_status_ic_mail"
 			android:checked="true"/>
 		<RadioButton
 			android:id="@+id/home_status_bar_weibo"
-			android:layout_width="100dp"
+			android:layout_width="0"
+			android:layout_weight="1"
 			android:layout_height="fill_parent"
 			android:text="Weibo"/>
 		<RadioButton
 			android:id="@+id/home_status_bar_im"
-			android:layout_width="100dp"
+			android:layout_width="0"
+			android:layout_weight="1"
 			android:layout_height="fill_parent"
 			android:text="IM"/>
-	</RadioGroup>
-
-    
+	</RadioGroup>   
 </RelativeLayout>
