--- a/yuchdroid16/res/layout/mail_open.xml
+++ b/yuchdroid16/res/layout/mail_open.xml
@@ -1,124 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout 
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
+	android:id="@+id/mail_open_main"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
+	android:orientation="vertical"
 	android:background="#FFF">
 	
-	<ImageView 
-		android:id="@+id/mail_open_pre_btn"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_alignParentLeft="true"
-		android:layout_alignParentTop="true"
-		android:src="@drawable/mail_open_pre_btn"/>
-		
-	<ImageView 
-		android:id="@+id/mail_open_next_btn"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_alignParentRight="true"
-		android:layout_alignParentTop="true"
-		android:src="@drawable/mail_open_next_btn" />
-		
 	<RelativeLayout
-		android:id="@+id/mail_open_envelope"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:layout_below="@id/mail_open_next_btn"
-		android:layout_alignParentLeft="true"
-		android:background="@drawable/mail_open_envelope_bg"
-		android:paddingTop="5dp"
-		android:paddingBottom="5dp">
-		<TextView
-			android:id="@+id/mail_open_from_addr"
-			android:layout_alignParentTop="true"
+		android:orientation="horizontal">
+		<ImageView 
+			android:id="@+id/mail_open_pre_btn"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:textColor="#000"
-			android:textSize="18dp"
-			android:text="Mail From Address"
-		/>
-		<TextView
-			android:id="@+id/mail_open_date"
-			android:layout_alignParentRight="true"
+			android:src="@drawable/mail_open_pre_btn"/>
+			
+		<ImageView 
+			android:id="@+id/mail_open_next_btn"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:textColor="#000"
-			android:textSize="14dp"
-			android:layout_marginTop="3dp"
-			android:text="Mail Date"
-		/>
-		<TextView
-			android:id="@+id/mail_open_recv_addr"
-			android:layout_below="@id/mail_open_from_addr"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textColor="#000"
-			android:textSize="14dp"
-			android:text="Mail Recv Addr"
-		/>
-		<TextView 
-			android:id="@+id/mail_open_time"
-			android:layout_below="@id/mail_open_date"
-			android:layout_alignParentRight="true"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textColor="#000"
-			android:textSize="14dp"
-			android:layout_marginTop="3dp"
-			android:text="Mail Time"
-		/>
-		<TextView
-			android:id="@+id/mail_open_subject"
-			android:layout_below="@id/mail_open_recv_addr"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textColor="#000"
-			android:textSize="16dp"
-			android:text="Mail Subject"
-		/>
+			android:src="@drawable/mail_open_next_btn" 
+			android:layout_alignParentRight="true"/>
 	</RelativeLayout>
 	
-	<TextView
-		android:id="@+id/mail_open_body"
-		android:layout_below="@id/mail_open_envelope"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:textColor="#000"
-		android:textSize="16dp"
-		android:text="Mail Body: this is a mail."
-	/>
-	
+	<TextView 
+		android:id="@+id/mail_open_open_former_envelope"
+	 	android:layout_width="fill_parent"
+	 	android:layout_height="30dp"
+	 	android:text="Touch to Open Fromer Mail (10)"
+	 	android:background="#ddd"
+	 	android:textColor="#000"
+	 	android:gravity="center"/>
 	
 	<LinearLayout 
-		android:layout_alignParentBottom="true"
-		android:layout_height="wrap_content"
 		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal"
 		android:background="#888"
-		android:paddingTop="5dp">
+		android:paddingTop="3dp">		
 		<Button 
-			android:id="@+id/mail_open_reply_btn"
-			android:layout_width="0"
+			android:id="@+id/mail_open_mail_reply_btn"
+			android:layout_width="0dp"
+			android:layout_height="fill_parent"
 			android:layout_weight="1"
-			android:layout_height="wrap_content"
 			android:text="@string/mail_open_reply_btn"
-		/>
+			android:drawableLeft="@drawable/mail_open_reply"/>
+			
 		<Button 
-			android:id="@+id/mail_open_reply_all_btn"
-			android:layout_width="0"
+			android:id="@+id/mail_open_mail_forward_btn"
+			android:layout_width="0dp"
+			android:layout_height="fill_parent"
 			android:layout_weight="1"
-			android:layout_height="wrap_content"
-			android:text="@string/mail_open_reply_all_btn"
-		/>
+			android:text="@string/mail_open_forward_btn"
+			android:drawableLeft="@drawable/mail_open_forward"/>
+			
 		<Button 
-			android:id="@+id/mail_open_delete_btn"
-			android:layout_width="0"
+			android:id="@+id/mail_open_mail_delete_btn"
+			android:layout_width="0dp"
+			android:layout_height="fill_parent"
 			android:layout_weight="1"
-			android:layout_height="wrap_content"
 			android:text="@string/mail_open_delete_btn"
-		/>
+			android:drawableLeft="@drawable/mail_open_delete"
+			android:paddingRight="5dp"/>
 	</LinearLayout>
-		    
-</RelativeLayout>
+</LinearLayout>
+
+
