--- a/yuchdroid16/res/layout/home.xml
+++ b/yuchdroid16/res/layout/home.xml
@@ -6,7 +6,8 @@
 	android:layout_height="fill_parent"
 	android:background="#FFF"
 	android:id="@+id/home_activity">
-		
+	
+	<!-- remove the radio group button
 	<RadioGroup 
 		android:id="@+id/home_status_bar"
 		android:orientation="horizontal"
@@ -35,5 +36,6 @@
 			android:layout_weight="1"
 			android:layout_height="fill_parent"
 			android:text="IM"/>
-	</RadioGroup>   
+	</RadioGroup>  
+	 --> 
 </RelativeLayout>
