--- a/yuchdroid16/res/layout/mail_list_item.xml
+++ b/yuchdroid16/res/layout/mail_list_item.xml
@@ -18,8 +18,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        	android:layout_alignParentLeft="true"
+       	android:layout_marginTop="3dp"
         android:maxWidth="150dp"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:singleLine="true"
         android:ellipsize="end"
         android:textColor="#000"
@@ -28,11 +29,12 @@
      
     <TextView
        	android:id="@+id/mail_body"
-       	android:textSize="20dp"
+       	android:textSize="18dp"
        	android:maxWidth="110dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="3dp"
+        android:layout_marginTop="3dp"
         android:textColor="#888"
         android:layout_toRightOf="@id/mail_subject"
         android:singleLine="true"
@@ -46,6 +48,7 @@
 		android:layout_height="wrap_content"
 		android:layout_toRightOf="@id/mail_attach_pic"
 		android:layout_alignParentBottom="true"
+		android:layout_marginBottom="3dp"
 		android:maxWidth="200dp"
 		android:textSize="16dp"
 		android:textColor="#000"
@@ -58,7 +61,8 @@
 		android:layout_height="wrap_content"
 		android:maxWidth="100dp"
 		android:layout_alignParentBottom="true"
-		android:layout_alignParentRight="true"			
+		android:layout_alignParentRight="true"
+		android:layout_marginBottom="3dp"	
 		android:textSize="12dp"
 		android:textColor="#000"
 		android:singleLine="true"
