--- a/yuchdroid16/res/layout/mail_list_item.xml
+++ b/yuchdroid16/res/layout/mail_list_item.xml
@@ -31,12 +31,12 @@
     <TextView
        	android:id="@+id/mail_body"
        	android:textSize="18dp"
-       	android:maxWidth="110dp"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="3dp"
         android:layout_marginTop="3dp"
         android:textColor="#888"
+        android:layout_alignParentRight="true"
         android:layout_toRightOf="@id/mail_subject"
         android:singleLine="true"
         android:ellipsize="end"
@@ -50,7 +50,7 @@
 		android:layout_alignLeft="@id/mail_subject"
 		android:layout_alignParentBottom="true"
 		android:layout_marginBottom="3dp"
-		android:maxWidth="200dp"
+		android:maxWidth="190dp"
 		android:textSize="16dp"
 		android:textColor="#000"
 		android:singleLine="true"
@@ -63,7 +63,8 @@
 		android:maxWidth="100dp"
 		android:layout_alignParentBottom="true"
 		android:layout_alignParentRight="true"
-		android:layout_marginBottom="3dp"	
+		android:layout_marginBottom="5dp"
+		android:paddingRight="5dp"	
 		android:textSize="12dp"
 		android:textColor="#000"
 		android:singleLine="true"
